fix(candlestick): annotation text should not wrap (#891)

--- a/src/ui/elements/html/element-label-annotation.css
+++ b/src/ui/elements/html/element-label-annotation.css
@@ -18,8 +18,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
   padding: 0 4px;
   position: relative;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 }
 
 .annotation.intent-primary {
